<resources>
    <string name="app_name" translatable="false">ExPLoRAA</string>
    <string name="learn">Learn</string>
    <string name="teach">Teach</string>
    <string name="ExPLoRAA_logo" translatable="false">ExPLoRAA Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create">Create</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="stimuli">Stimuli</string>
    <string name="lessons">Lessons</string>
    <string name="following_lessons">Following lessons</string>
    <string name="teaching_lessons">Teaching lessons</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="add_lesson">Add lesson</string>
    <string name="topics">Topics</string>
    <string name="choose_topics">Choose topics</string>
    <string name="remove_lessons">Remove lessons</string>
    <string name="time">Time</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="lesson_type">Lesson type</string>
    <string name="lesson_name">Lesson name</string>
    <string name="add_lesson_type">Add</string>
    <string name="connection_status">Connection status</string>
    <string name="lesson_status">Lesson status</string>
    <string name="select_a_lesson">Select a lesson</string>
    <string name="text">Text</string>
    <string name="question">Question</string>
    <string name="url">Link</string>
    <string name="node">Node</string>
    <string name="trigger">Trigger</string>
    <string name="send">Send</string>
    <string name="connect_empatica_e4">Connect Empatica E4</string>
    <string name="disconnect_empatica_e4">Disconnect Empatica E4</string>
</resources>
