<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/token_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/token_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/token_time_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/token_min_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/token_time_label" />

    <TextView
        android:id="@+id/token_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/min"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/token_min_label"
        app:layout_constraintTop_toBottomOf="@+id/token_time" />

    <TextView
        android:id="@+id/token_max_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/max"
        app:layout_constraintStart_toEndOf="@+id/token_min"
        app:layout_constraintTop_toBottomOf="@+id/token_time" />

    <TextView
        android:id="@+id/token_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/max"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/token_max_label"
        app:layout_constraintTop_toBottomOf="@+id/token_time" />

    <android.support.constraint.Barrier
        android:id="@+id/token_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="token_time,token_time_label,token_max_label,token_min,token_max,token_min_label"
        tools:layout_editor_absoluteX="384dp" />

    <TextView
        android:id="@+id/token_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:maxWidth="200dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/token_barrier"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>